--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
-
+       <!-- CSS only -->
+       <link
+       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+       rel="stylesheet"
+       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+       crossorigin="anonymous"
+     />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -21,7 +27,16 @@
         flex-grow: 1;
       } -->
 
-    </style>
+    <!-- </style> -->
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
+      
+      * {
+        font-family: "Noto Serif KR", serif;
+      }
+     
+     </style>
   </head>
 
   <body>
