--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- 설명 -->
     <meta property="og:description" content="나의 포트폴리오를 구경하세요" />
     <!-- 대표 이미지 -->
-    <meta property="og:image" content="이미지 URL" />
+    <meta property="og:image" content=" https://blog.kakaocdn.net/dn/tpAGr/btqFuWx3sD7/dNaZWB8i64pm5EXAp4YLg0/img.jpg" />
     <!-- 접속 가능한주소 -->
     <meta property="og:url" content=" https://github.dev/Sangwoook/Zoo" />
 
