--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- 설명 -->
     <meta property="og:description" content="나의 포트폴리오를 구경하세요" />
     <!-- 대표 이미지 -->
-    <meta property="og:image" content=" https://ogp.me/logo.png" />
+    <meta property="og:image" content="https://c.pxhere.com/photos/11/23/photo-73722.jpg!d" />
     <!-- 접속 가능한주소 -->
     <meta property="og:url" content=" https://github.dev/Sangwoook/Zoo" />
 
